[package]
name = "adom"
version = "0.0.1"
authors = ["Lex Childs <lexchilds@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
categories = [ "database", "asynchronous" ]
keywords = [ "database", "async", "postgres", "objectmapper" ]

[lib]
proc-macro = true

[dependencies]
syn = "1.0.13"
log = "*"
quote = "1.0.2"
tokio-postgres = "0.5.5"

