[package]
name = "adom"
version = "0.0.4"
authors = ["Lex Childs <lexchilds@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "async-postgres macros for object mapping"
categories = [ "database", "asynchronous" ]
keywords = [ "database", "async", "postgres", "objectmapper" ]
repository = "https://github.com/lex148/adom"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.13"
log = "0.4"
quote = "1.0.2"
tokio-postgres = "0.5.5"

